增加国内源

--- a/themes/hugo-material-docs/layouts/partials/footer_js.html
+++ b/themes/hugo-material-docs/layouts/partials/footer_js.html
@@ -85,7 +85,7 @@
       </script>
     {{ end }}
 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
+    <script src="//cdn.bootcss.com/highlight.js/9.11.0/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
   </body>
 </html>
